--- a/ort-sys/Cargo.toml
+++ b/ort-sys/Cargo.toml
@@ -21,3 +21,4 @@ load-dynamic = [ "libloading" ]
 thiserror = "1.0"
 once_cell = "1.18.0"
 libloading = { version = "0.7", optional = true }
+smallvec = "1.11.0"
